# Compiler

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: module.h  operation.h  optimization.h  type.h
lib/: module.cpp  operation.cpp  optimization.cpp
tests/: CMakeLists.txt  DFS.cpp  EmptyModule.cpp  IRModule.cpp  LoopAnalyzer.cpp  check_elimination.cpp  dominators.cpp  dummy_test.cpp  inline.cpp  liveness.cpp  optimization.cpp  regAlloc.cpp
